feat: #1511 Generate mock samples at scale! Signed-off-by: Laurent Broudoux <laurent.broudoux@gmail.com>